Create judge worker and evaluate async
References:

- https://devcenter.heroku.com/articles/asynchronous-web-worker-model-using-rabbitmq-in-java
- https://devcenter.heroku.com/articles/cloudamqp#installing-the-add-on
- https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-messaging
- https://spring.io/guides/gs/accessing-data-mysql/
    - for hibernate configuration
- https://spring.io/guides/gs/messaging-rabbitmq/

--- a/judge/src/main/resources/application.yml
+++ b/judge/src/main/resources/application.yml
@@ -1,15 +1,8 @@
 spring:
-  security:
-    oauth2:
-      client:
-        registration:
-          github:
-            client-id: PUT_YOUR_CLIENT_ID
-            client-secret: PUT_YOUR_CLIENT_SECRET
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
   datasource:
     driver-class-name: org.postgresql.Driver
     url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/gekitsui?sslmode=require}
