Limit size of test case
There is `spring.servlet.multipart.max-request-size`.
But, a concern is payload might include other information
in the future.

https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html

--- a/webapp/src/main/resources/application.yml
+++ b/webapp/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
     password: ${JDBC_DATABASE_PASSWORD}
   rabbitmq:
     addresses: ${CLOUDAMQP_URL:amqp://guest:guest@localhost}
+gekitsui:
+  submission:
+    max-testcase-size: 2000
