Register user on any Request
Create a new cookie to avoid querying DB on every request.
Yet the cookie value is hashed with username + salt,
we must not authenticate a user with the value.

--- a/webapp/src/main/resources/application.yml
+++ b/webapp/src/main/resources/application.yml
@@ -18,5 +18,7 @@ spring:
   rabbitmq:
     addresses: ${CLOUDAMQP_URL:amqp://guest:guest@localhost}
 gekitsui:
+  cookie:
+    user-salt: salt
   submission:
     max-testcase-size: 2000
