Add syntax highlight and style for input format
- https://highlightjs.org

--- a/webapp/src/main/resources/application.yml
+++ b/webapp/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
   cache:
     jcache:
       config: classpath:ehcache.xml
+  mvc:
+    static-path-pattern: /static/**
 bucket4j:
   enabled: true
   filters:
