Reduce maximum DB connection pool size of Judge
Since the judge worker consumes 10 connections, Dataclip of Heroku was
failing.

- https://docs.spring.io/spring-boot/docs/2.2.4.RELEASE/reference/html/appendix-application-properties.html#data-properties

--- a/judge/src/main/resources/application.yml
+++ b/judge/src/main/resources/application.yml
@@ -8,5 +8,7 @@ spring:
     url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/gekitsui?sslmode=require}
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
+    hikari:
+      maximum-pool-size: 5
   rabbitmq:
     addresses: ${CLOUDAMQP_URL:amqp://guest:guest@localhost}
