Create admin page #7
- https://docs.spring.io/spring-security/site/docs/5.0.7.RELEASE/reference/html/oauth2login-advanced.html#oauth2login-advanced-map-authorities
- [It seems we cannot get list properties from yaml without `ConfigurationProperties`](https://stackoverflow.com/questions/26699385/spring-boot-yaml-configuration-for-a-list-of-strings/26700938)
- http://forum.thymeleaf.org/Relative-th-include-paths-td4028161.html

--- a/webapp/src/main/resources/application.yml
+++ b/webapp/src/main/resources/application.yml
@@ -35,6 +35,7 @@ bucket4j:
             time: 1
             unit: hours
 gekitsui:
+  admins: blue-jam
   cookie:
     user-salt: salt
   submission:
