--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+built/
 
 ### STS ###
 .apt_generated
@@ -30,3 +31,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Node.js ###
+node_modules/
