--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch -d"
+    "watch": "webpack --watch -d",
+    "build": "webpack --mode production"
   },
   "author": "blue-jam",
   "license": "Apache-2.0",
