--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,11 +12,15 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/highlight.js": "^9.12.3",
+    "@types/marked": "^0.7.2",
     "@types/node": "^13.7.6",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "classnames": "^2.2.6",
+    "highlight.js": "^9.18.1",
+    "marked": "^0.8.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
@@ -27,7 +31,9 @@
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "prettier": "^1.19.1",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
