--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,8 +23,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: |
-        ./gradlew build
-        ./gradlew codeCoverageReport
+        ./gradlew build codeCoverageReport
+      env:
+        CLOUDAMQP_URL: amqp://localhost:${{ job.services.rabbitmq.ports[5672] }}
     - name: Upload coverage report
       uses: codecov/codecov-action@v1
       with:
