--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,6 +26,7 @@ jobs:
         ./gradlew build codeCoverageReport
       env:
         CLOUDAMQP_URL: amqp://localhost:${{ job.services.rabbitmq.ports[5672] }}
+        RABBITMQ_TEST_PORT: ${{ job.services.rabbitmq.ports[5672] }}
     - name: Upload coverage report
       uses: codecov/codecov-action@v1
       with:
