--- a/webapp/src/test/resources/application.yml
+++ b/webapp/src/test/resources/application.yml
@@ -8,6 +8,8 @@ spring:
             client-secret: TEST_CLIENT_SECRET
   jpa:
     database: h2
+  rabbitmq:
+    addresses: ${CLOUDAMQP_URL:amqp://guest:guest@localhost}
 gekitsui:
   admins: admin
   cookie:
